build: registration maked

--- a/configs/nginx-default-dev.conf
+++ b/configs/nginx-default-dev.conf
@@ -13,7 +13,7 @@ server {
     }
 
     set $frontend_app nuxt;
-    set $backend_app django;
+    set $backend_app spring;
     set $adminer_app adminer;
 
     location ~ ^/(adminer) {
