--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,20 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=1111
+spring.datasource.url=jdbc:postgresql://postgres:5432/db_name
+spring.datasource.username=db_user
+spring.datasource.password=db_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Базовый уровень логирования
-logging.level.root=INFO
-logging.level.org.springframework=DEBUG
-logging.level.com.yourpackage=DEBUG  # замените на ваш пакет
-
-# Вывод SQL‑запросов (если нужно)
-spring.jpa.show-sql=true
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-# Формат логов (с датой, потоком и т.д.)
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %logger{36} - %msg%n
