--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+# Подключение к PostgreSQL
 spring.datasource.url=jdbc:postgresql://postgres:5432/db_name
 spring.datasource.username=db_user
 spring.datasource.password=db_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Настройки Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
